Add env vars to projects and support port
